Apr 25, 2014 - chris ---------------------------------------------------
o Fixing a performance regression in 2.1.7 - large fixed-length keys
	created too many page splits, even if they were stored as extended
	keys

Apr 08, 2014 - chris ---------------------------------------------------
o PAX layout now uses linear search for small ranges; this improves search
	performance by 5-10%

Apr 05, 2014 - chris ---------------------------------------------------
o Removed the ham_get_license API (and serial.h)

Apr 04, 2014 - chris ---------------------------------------------------
o issue #33: upgraded to libuv 0.11.22
o Removed the API ham_get_license

Mar 26, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.7

Mar 24, 2014 - chris ---------------------------------------------------
o Switched from GPL license to Apache Public License 2.0

Mar 23, 2014 - chris ---------------------------------------------------
o Added a unittest for issue #32
o Removed AES encryption; will be available as a commercial add-on.

Mar 21, 2014 - chris ---------------------------------------------------
o Fixed a journalling bug; partial records were not logged correctly

Mar 10, 2014 - chris ---------------------------------------------------
o Added flag HAM_DISABLE_RECOVERY; disables recovery/journal when used in 
	combination with HAM_ENABLE_TRANSACTIONS

Mar 09, 2014 - chris ---------------------------------------------------
o Committed Transactions are no longer flushed immediately, but can be
	buffered and flushed together with other committed Transactions

Mar 04, 2014 - chris ---------------------------------------------------
o Removed the txn parameter from ham_db_check_integrity()

Feb 26, 2014 - chris ---------------------------------------------------
o Fixed a freelist bug; the persistent freelist state was sometimes not
	correctly initialized
